--- a/.github/workflows/schemas.yaml
+++ b/.github/workflows/schemas.yaml
@@ -18,16 +18,21 @@ jobs:
       contents: read
       packages: write
     steps:
-      - name: Get Secrets
-        uses: bitwarden/sm-action@v2
+      - name: Configure 1password
+        uses: 1password/load-secrets-action/configure@v2
         with:
-          access_token: ${{ secrets.BW_ACCESS_TOKEN }}
-          secrets: |
-            d12da64e-d865-4f4b-8ae0-b133013c4251 > CLOUDFLARE_API_KEY
-            e42be752-82d4-4340-84d2-b133013dc94a > CLOUDFLARE_ACCOUNT_ID
-            1c493889-1e30-4156-a937-b10100433300 > KUBECONFIG
-            e062dcb9-8cd7-471e-b9be-b10100497102 > BOT_APP_ID
-            5856238d-3fae-4a0f-9847-b1010049f697 > BOT_APP_PRIVATE_KEY
+          service-account-token: ${{ secrets.ONEPASS_SA_TOKEN }}
+
+      - name: Get Secrets
+        uses: 1password/load-secrets-action@v2
+        with:
+          export-env: true
+        env:
+          BOT_APP_ID: op://Kubernetes/github-bot/BOT_APP_ID
+          BOT_APP_PRIVATE_KEY: op://Kubernetes/github-bot/BOT_APP_PRIVATE_KEY
+          KUBECONFIG: op://Kubernetes/kubernetes/KUBECONFIG_BASE4
+          CLOUDFLARE_API_KEY: op://Kubernetes/cloudflare/CLOUDFLARE_API_KEY_GHA
+          CLOUDFLARE_ACCOUNT_ID: op://Kubernetes/cloudflare/CLOUDFLARE_ACCOUNT_TAG
 
       - name: Generate Token
         uses: actions/create-github-app-token@v1
