--- a/kubernetes/utility/apps/flux-system/tofu-controller/app/externalsecret.yaml
+++ b/kubernetes/utility/apps/flux-system/tofu-controller/app/externalsecret.yaml
@@ -18,3 +18,22 @@ spec:
   dataFrom:
   - extract:
       key: minio
+---
+# yaml-language-server: $schema=https://kube-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: &name terraform-secret
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword-connect
+  target:
+    name: *name
+    template:
+      engineVersion: v2
+      data:
+        service_account_json: "{{ .OP_CREDENTIALS_JSON }}"
+  dataFrom:
+  - extract:
+      key: 1password
