--- a/.github/workflows/terraform-diff.yaml
+++ b/.github/workflows/terraform-diff.yaml
@@ -97,13 +97,10 @@ jobs:
 
       - name: Setup Workflow Tools
         shell: bash
-        run: brew install node
+        run: brew install terraform
 
       - name: Install 1Password CLI
         uses: 1password/install-cli-action@v1
-
-      - name: Setup terraform
-        uses: hashicorp/setup-terraform@v3
 
       - name: Terraform fmt
         id: fmt
