chore: swap to bearer token

--- a/kubernetes/utility/apps/flux-system/tofu-controller/app/externalsecret.yaml
+++ b/kubernetes/utility/apps/flux-system/tofu-controller/app/externalsecret.yaml
@@ -33,7 +33,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        service_account_json: "{{ .OP_CREDENTIALS_JSON }}"
+        service_account_json: "{{ .OP_CONNECT_TOKEN }}"
   dataFrom:
   - extract:
       key: 1password
