feat(task): add OP taskfile

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -21,6 +21,7 @@ includes:
   bootstrap: .taskfiles/bootstrap
   bitwarden: .taskfiles/bitwarden
   kubernetes: .taskfiles/kubernetes
+  op: .taskfiles/onepassword
   sops: .taskfiles/sops
   talos: .taskfiles/talos
   volsync: .taskfiles/volsync
