feat: update var

--- a/.taskfiles/onepassword/Taskfile.yaml
+++ b/.taskfiles/onepassword/Taskfile.yaml
@@ -39,7 +39,7 @@ tasks:
       - op item get kubernetes --fields label=TALOSCONFIG_MAIN > {{.ROOT_DIR}}/kubernetes/main/talos/clusterconfig/talosconfig # Main talosconfig
       - op item get kubernetes --fields label=KUBECONFIG_UTILITY > {{.ROOT_DIR}}/kubernetes/utility/kubeconfig # Utility kubeconfig
       - op item get kubernetes --fields label=TALOSCONFIG_UTILITY > {{.ROOT_DIR}}/kubernetes/utility/talos/clusterconfig/talosconfig # Utility talosconfig
-      - op item get kubernetes --fields label=KUBECONFIG ~/.kube/config # Flat kubeconfig
+      - op item get kubernetes --fields label=KUBECONFIG > ~/.kube/config # Flat kubeconfig
       ## Note: The last `talosconfig` merged becomes the default context
       ## We pull the second talosconfig, and merge the main into it, so main is default
       - op item get kubernetes --fields label=TALOSCONFIG_UTILITY > ~/.talos/config # Utility talosconfig
