feat(cert-manager): test pushsecret

--- a/kubernetes/main/apps/cert-manager/cert-manager/issuers/issuers.yaml
+++ b/kubernetes/main/apps/cert-manager/cert-manager/issuers/issuers.yaml
@@ -13,6 +13,7 @@ spec:
     solvers:
       - dns01:
           cloudflare:
+            email: "${SECRET_ACME_EMAIL}"
             apiTokenSecretRef:
               name: cloudflare-secret
               key: CLOUDFLARE_API_KEY
@@ -33,6 +34,7 @@ spec:
     solvers:
       - dns01:
           cloudflare:
+            email: "${SECRET_ACME_EMAIL}"
             apiTokenSecretRef:
               name: cloudflare-secret
               key: CLOUDFLARE_API_KEY
