--- a/kubernetes/utility/apps/network/nginx/external/helmrelease.yaml
+++ b/kubernetes/utility/apps/network/nginx/external/helmrelease.yaml
@@ -73,7 +73,7 @@ spec:
           namespaceSelector:
             any: true
       extraArgs:
-        default-ssl-certificate: cert-manager/${SECRET_DOMAIN}-tls
+        default-ssl-certificate: network/${SECRET_DOMAIN}-tls
       terminationGracePeriodSeconds: 120
       topologySpreadConstraints:
         - maxSkew: 1
