feat: update code to match provider

--- a/kubernetes/utility/talos/talconfig.yaml
+++ b/kubernetes/utility/talos/talconfig.yaml
@@ -125,12 +125,12 @@ patches:
             options: ["bind", "rshared", "rw"]
 
   # # Mount 2nd disk for Longhorn Storage
-  # - |-
-  #   machine:
-  #     disks:
-  #     - device: /dev/nvme0n1
-  #       partitions:
-  #         - mountpoint: /var/mnt/longhorn
+  - |-
+    machine:
+      disks:
+      - device: /dev/nvme0n1
+        partitions:
+          - mountpoint: /var/mnt/longhorn
 
   # # Disable predictable NIC naming
   # - |-
