feat: migrate LH to nvme

--- a/kubernetes/utility/talos/talconfig.yaml
+++ b/kubernetes/utility/talos/talconfig.yaml
@@ -119,9 +119,9 @@ patches:
     machine:
       kubelet:
         extraMounts:
-          - destination: /var/mnt/longhorn
+          - destination: /var/lib/longhorn/
             type: bind
-            source: /var/mnt/longhorn
+            source: /var/lib/longhorn/
             options: ["bind", "rshared", "rw"]
 
   # # Mount 2nd disk for Longhorn Storage
@@ -130,7 +130,7 @@ patches:
       disks:
       - device: /dev/nvme0n1
         partitions:
-          - mountpoint: /var/mnt/longhorn
+          - mountpoint: /var/lib/longhorn/
 
   # # Disable predictable NIC naming
   # - |-
