--- a/kubernetes/main/apps/media/kyoo/app-template/helmrelease.yaml
+++ b/kubernetes/main/apps/media/kyoo/app-template/helmrelease.yaml
@@ -227,7 +227,7 @@ spec:
         runAsGroup: 568
         fsGroup: 568
         fsGroupChangePolicy: OnRootMismatch
-        supplementalGroups: [44, 10000]
+        supplementalGroups: [44]
         seccompProfile: { type: RuntimeDefault }
     service:
       back:
