--- a/kubernetes/main/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/grafana/app/helmrelease.yaml
@@ -255,7 +255,9 @@ spec:
           revision: 3
           datasource: Prometheus
         cert-manager:
-          url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/cert-manager/dashboards/cert-manager.json
+          # renovate: depName="Cert-manager-Kubernetes"
+          gnetId: 20842
+          revision: 3
           datasource: Prometheus
         unifi-insights:
           # renovate: depName="UniFi-Poller: Client Insights - Prometheus"
