--- a/kubernetes/utility/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/observability/grafana/app/helmrelease.yaml
@@ -122,7 +122,9 @@ spec:
             - { name: DS_PROMETHEUS, value: Prometheus }
             - { name: VAR_BLOCKY_URL, value: 'http:\/\/blocky.${SECRET_DOMAIN}' }
         cert-manager:
-          url: https://raw.githubusercontent.com/monitoring-mixins/website/master/assets/cert-manager/dashboards/cert-manager.json
+          # renovate: depName="Cert-manager-Kubernetes"
+          gnetId: 20842
+          revision: 3
           datasource: Prometheus
         cloudflared:
           # renovate: depName="Cloudflare Tunnels (cloudflared)"
