--- a/kubernetes/main/apps/observability/alertmanager-silencer/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/alertmanager-silencer/app/helmrelease.yaml
@@ -44,7 +44,7 @@ spec:
               MATCHERS_1: alertname=CephNodeNetworkPacketErrors
               MATCHERS_2: alertname=CephMonClockSkew
               MATCHERS_3: alertname=CephNodeNetworkPacketDrops
-              MATCHERS_4: alertname=CephNodeDiskspaceWarning device=/dev/sda6
+              MATCHERS_4: alertname=CephNodeDiskspaceWarning device=/dev/sda6 device=/dev/sdb6
               MATCHERS_5: alertname=CephNodeDiskspaceWarning mountpoint=/etc/nfsmount.conf
               MATCHERS_6: alertname=KubePersistentVolumeFillingUp persistentvolumeclaim=data-thanos-compact-0
             securityContext:
