--- a/kubernetes/main/apps/games/kustomization.yaml
+++ b/kubernetes/main/apps/games/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
-  - ./core-keeper/ks.yaml
+  # - ./core-keeper/ks.yaml
   - ./minecraft/ks.yaml
-  - ./palworld/ks.yaml
+  # - ./palworld/ks.yaml
