--- a/kubernetes/main/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/main/apps/self-hosted/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   # Flux-Kustomizations
   - ./actual/ks.yaml
   - ./atuin/ks.yaml
-  - ./changedetection/ks.yaml
+  # - ./changedetection/ks.yaml
   - ./homepage/ks.yaml
   - ./lubelog/ks.yaml
   - ./paperless/ks.yaml
