--- a/kubernetes/utility/talos/talconfig.yaml
+++ b/kubernetes/utility/talos/talconfig.yaml
@@ -104,6 +104,27 @@ patches:
         net.ipv4.tcp_tw_reuse: 1
         net.ipv4.tcp_window_scaling: 1
 
+  # Custom sysfs settings
+  - |-
+    machine:
+      sysfs:
+        devices.system.cpu.cpu0.cpufreq.energy_performance_preference: balance_performance
+        devices.system.cpu.cpu1.cpufreq.energy_performance_preference: balance_performance
+        devices.system.cpu.cpu2.cpufreq.energy_performance_preference: balance_performance
+        devices.system.cpu.cpu3.cpufreq.energy_performance_preference: balance_performance
+        devices.system.cpu.cpu4.cpufreq.energy_performance_preference: balance_performance
+        devices.system.cpu.cpu5.cpufreq.energy_performance_preference: balance_performance
+        devices.system.cpu.cpu6.cpufreq.energy_performance_preference: balance_performance
+        devices.system.cpu.cpu7.cpufreq.energy_performance_preference: balance_performance
+        devices.system.cpu.cpu8.cpufreq.energy_performance_preference: balance_performance
+        devices.system.cpu.cpu9.cpufreq.energy_performance_preference: balance_performance
+        devices.system.cpu.cpu10.cpufreq.energy_performance_preference: balance_performance
+        devices.system.cpu.cpu11.cpufreq.energy_performance_preference: balance_performance
+        devices.system.cpu.cpu12.cpufreq.energy_performance_preference: balance_performance
+        devices.system.cpu.cpu13.cpufreq.energy_performance_preference: balance_performance
+        devices.system.cpu.cpu14.cpufreq.energy_performance_preference: balance_performance
+        devices.system.cpu.cpu15.cpufreq.energy_performance_preference: balance_performance
+
   # Mount openebs-hostpath in kubelet
   - |-
     machine:
