--- a/kubernetes/utility/talos/talconfig.yaml
+++ b/kubernetes/utility/talos/talconfig.yaml
@@ -108,22 +108,22 @@ patches:
   - |-
     machine:
       sysfs:
-        devices.system.cpu.cpu0.cpufreq.energy_performance_preference: balance_performance
-        devices.system.cpu.cpu1.cpufreq.energy_performance_preference: balance_performance
-        devices.system.cpu.cpu2.cpufreq.energy_performance_preference: balance_performance
-        devices.system.cpu.cpu3.cpufreq.energy_performance_preference: balance_performance
-        devices.system.cpu.cpu4.cpufreq.energy_performance_preference: balance_performance
-        devices.system.cpu.cpu5.cpufreq.energy_performance_preference: balance_performance
-        devices.system.cpu.cpu6.cpufreq.energy_performance_preference: balance_performance
-        devices.system.cpu.cpu7.cpufreq.energy_performance_preference: balance_performance
-        devices.system.cpu.cpu8.cpufreq.energy_performance_preference: balance_performance
-        devices.system.cpu.cpu9.cpufreq.energy_performance_preference: balance_performance
-        devices.system.cpu.cpu10.cpufreq.energy_performance_preference: balance_performance
-        devices.system.cpu.cpu11.cpufreq.energy_performance_preference: balance_performance
-        devices.system.cpu.cpu12.cpufreq.energy_performance_preference: balance_performance
-        devices.system.cpu.cpu13.cpufreq.energy_performance_preference: balance_performance
-        devices.system.cpu.cpu14.cpufreq.energy_performance_preference: balance_performance
-        devices.system.cpu.cpu15.cpufreq.energy_performance_preference: balance_performance
+        devices.system.cpu.cpu0.cpufreq.energy_performance_preference: balance_power
+        devices.system.cpu.cpu1.cpufreq.energy_performance_preference: balance_power
+        devices.system.cpu.cpu2.cpufreq.energy_performance_preference: balance_power
+        devices.system.cpu.cpu3.cpufreq.energy_performance_preference: balance_power
+        devices.system.cpu.cpu4.cpufreq.energy_performance_preference: balance_power
+        devices.system.cpu.cpu5.cpufreq.energy_performance_preference: balance_power
+        devices.system.cpu.cpu6.cpufreq.energy_performance_preference: balance_power
+        devices.system.cpu.cpu7.cpufreq.energy_performance_preference: balance_power
+        devices.system.cpu.cpu8.cpufreq.energy_performance_preference: balance_power
+        devices.system.cpu.cpu9.cpufreq.energy_performance_preference: balance_power
+        devices.system.cpu.cpu10.cpufreq.energy_performance_preference: balance_power
+        devices.system.cpu.cpu11.cpufreq.energy_performance_preference: balance_power
+        devices.system.cpu.cpu12.cpufreq.energy_performance_preference: balance_power
+        devices.system.cpu.cpu13.cpufreq.energy_performance_preference: balance_power
+        devices.system.cpu.cpu14.cpufreq.energy_performance_preference: balance_power
+        devices.system.cpu.cpu15.cpufreq.energy_performance_preference: balance_power
 
   # Mount openebs-hostpath in kubelet
   - |-
