--- a/kubernetes/utility/apps/kube-system/kubelet-csr-approver/app/helm-values.yaml
+++ b/kubernetes/utility/apps/kube-system/kubelet-csr-approver/app/helm-values.yaml
@@ -1,4 +1,8 @@
 ---
+replicas: 1
 providerRegex: ^(celestia)$
 bypassDnsResolution: true
-replicas: 1
+metrics:
+  enable: true
+  serviceMonitor:
+    enabled: true
