--- a/kubernetes/main/apps/kube-system/kubelet-csr-approver/app/helm-values.yaml
+++ b/kubernetes/main/apps/kube-system/kubelet-csr-approver/app/helm-values.yaml
@@ -1,3 +1,8 @@
 ---
+replicas: 3
 providerRegex: ^(ayaka|eula|ganyu|hutao|navia|yelan)$
 bypassDnsResolution: true
+metrics:
+  enable: true
+  serviceMonitor:
+    enabled: true
