--- a/kubernetes/utility/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/kube-system/cilium/app/helmrelease.yaml
@@ -44,7 +44,7 @@ spec:
         dashboards:
           enabled: true
           annotations:
-            grafana_folder: Cilium
+            grafana_folder: Network
       relay:
         enabled: true
         rollOutPods: true
@@ -60,18 +60,3 @@ spec:
           annotations:
             external-dns.alpha.kubernetes.io/target: internal-utility.${SECRET_DOMAIN}
           hosts: ["hubble-utility.${SECRET_DOMAIN}"]
-    operator:
-      replicas: 1
-      prometheus:
-        enabled: true
-        serviceMonitor:
-          enabled: true
-      dashboards:
-        enabled: true
-    prometheus:
-      enabled: true
-      serviceMonitor:
-        enabled: true
-        trustCRDsExist: true
-    dashboards:
-      enabled: true
