feat: deploy dashbrr

--- a/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
+++ b/kubernetes/main/apps/database/crunchy-postgres/cluster/cluster.yaml
@@ -62,6 +62,10 @@ spec:
       databases: ["bazarr"]
       password:
         type: AlphaNumeric
+    - name: "dashbrr"
+      databases: ["dashbrr"]
+      password:
+        type: AlphaNumeric
     - name: "lubelog"
       databases: ["lubelog"]
       password:
