--- a/kubernetes/main/apps/downloads/kustomization.yaml
+++ b/kubernetes/main/apps/downloads/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./bazarr/ks.yaml
+  - ./dashbrr/ks.yaml
   - ./flaresolverr/ks.yaml
   - ./kapowarr/ks.yaml
   - ./metube/ks.yaml
