--- a/kubernetes/main/apps/downloads/radarr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/radarr/app/externalsecret.yaml
@@ -40,7 +40,7 @@ spec:
         RADARR__POSTGRES__PORT: '{{ index . "pgbouncer-port" }}'
         RADARR__POSTGRES__USER: '{{ .user }}'
         RADARR__POSTGRES__PASSWORD: '{{ .password }}'
-        RADARR__POSTGRES__MAINDB: radarr_main
+        RADARR__POSTGRES__MAINDB: '{{ .dbname }}'
   dataFrom:
   - extract:
       key: postgres-pguser-radarr
