--- a/kubernetes/main/apps/downloads/readarr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/readarr/app/externalsecret.yaml
@@ -40,7 +40,7 @@ spec:
         READARR__POSTGRES__PORT: '{{ index . "pgbouncer-port" }}'
         READARR__POSTGRES__USER: '{{ .user }}'
         READARR__POSTGRES__PASSWORD: '{{ .password }}'
-        READARR__POSTGRES__MAINDB: readarr_main
+        READARR__POSTGRES__MAINDB: '{{ .dbname }}'
         READARR__POSTGRES__LOGDB: readarr_log
         READARR__POSTGRES__CACHEDB: readarr_cache
   dataFrom:
