--- a/kubernetes/main/apps/self-hosted/homepage/app/externalsecret.yaml
+++ b/kubernetes/main/apps/self-hosted/homepage/app/externalsecret.yaml
@@ -38,7 +38,7 @@ spec:
         HOMEPAGE_VAR_SONARR_TOKEN: "{{ .SONARR_API_KEY }}"
         ## Media
         HOMEPAGE_VAR_OVERSEERR_TOKEN: "{{ .OVERSEERR_API_KEY }}"
-        HOMEPAGE_VAR_PLEX_TOKEN: "{{ .PLEX_TOKEN }}"
+        HOMEPAGE_VAR_PLEX_TOKEN: "{{ .PLEX_API_KEY }"
         HOMEPAGE_VAR_TAUTULLI_TOKEN: "{{ .TAUTULLI_API_KEY }}"
         HOMEPAGE_VAR_KAVITA_USERNAME: "{{ .KAVITA_USERNAME }}"
         HOMEPAGE_VAR_KAVITA_PASSWORD: "{{ .KAVITA_PASSWORD }}"
