--- a/kubernetes/main/apps/media/plex/app/externalsecret.yaml
+++ b/kubernetes/main/apps/media/plex/app/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        PLEX_TOKEN: "{{ .PLEX_TOKEN }}"
+        PLEX_TOKEN: "{{ .PLEX_API_KEY }"
   dataFrom:
   - extract:
       key: plex
