--- a/kubernetes/main/apps/media/plex/movie-roulette/externalsecret.yaml
+++ b/kubernetes/main/apps/media/plex/movie-roulette/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        PLEX_TOKEN: "{{ .PLEX_TOKEN }}"
+        PLEX_TOKEN: "{{ .PLEX_API_KEY }"
         PLEX_POSTER_USERS: "{{ .PLEX_POSTER_USERS }}"
   dataFrom:
   - extract:
