fix: swap to edge

--- a/kubernetes/main/apps/downloads/dashbrr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/dashbrr/app/helmrelease.yaml
@@ -37,7 +37,8 @@ spec:
           app:
             image:
               repository: ghcr.io/autobrr/dashbrr
-              tag: v0.2.0@sha256:b3b898d4bf9b463bf802e7af188de45e6ca08eb96e828b4e9cbfde6e418441ad
+              tag: pr-67
+              # tag: v0.2.0@sha256:b3b898d4bf9b463bf802e7af188de45e6ca08eb96e828b4e9cbfde6e418441ad
             env:
               DASHBRR__CONFIG_PATH: /config/config.toml
               DASHBRR__DB_PATH: /cache/._  # cache path is derived from DASHBRR__DB_PATH
