feat: add more services

--- a/kubernetes/main/apps/downloads/dashbrr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/dashbrr/app/externalsecret.yaml
@@ -17,6 +17,8 @@ spec:
         DASHBRR_RADARR_API_KEY: "{{ .RADARR_API_KEY }}"
         DASHBRR_SONARR_API_KEY: "{{ .SONARR_API_KEY }}"
         DASHBRR_PROWLARR_API_KEY: "{{ .PROWLARR_API_KEY }}"
+        DASHBRR_OVERSEERR_API_KEY: "{{ .OVERSEERR_API_KEY }}"
+        DASHBRR_MAINTAINERR_API_KEY: "{{ .MAINTAINERR_API_KEY }}"
         DASHBRR_PLEX_API_KEY: "{{ .PLEX_API_KEY }}"
         # OIDC
         OIDC_ISSUER: "https://sso.${SECRET_DOMAIN}/application/o/dashbrr/"
@@ -30,6 +32,10 @@ spec:
       key: sonarr
   - extract:
       key: prowlarr
+  - extract:
+      key: overseerr
+  - extract:
+      key: maintainerr
   - extract:
       key: plex
   - extract:
