--- a/kubernetes/main/apps/downloads/bazarr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/bazarr/app/externalsecret.yaml
@@ -15,7 +15,7 @@ spec:
       data:
         # App
         BAZARR__API_KEY: '{{ .BAZARR_API_KEY }}'
-        PLEX_TOKEN: "{{ .PLEX_API_KEY }"
+        PLEX_TOKEN: "{{ .PLEX_API_KEY }}"
   dataFrom:
   - extract:
       key: bazarr
