--- a/kubernetes/main/apps/media/plex/kometa/externalsecret.yaml
+++ b/kubernetes/main/apps/media/plex/kometa/externalsecret.yaml
@@ -21,7 +21,7 @@ spec:
         KOMETA_MYANIMELIST_LOCALHOST_URL: "{{ .MYANIMELIST_LOCALHOST_URL }}"
         KOMETA_MYANIMELIST_REFRESH_TOKEN: "{{ .MYANIMELIST_REFRESH_TOKEN }}"
         KOMETA_OMDB_API_KEY: "{{ .OMDB_API_KEY }}"
-        KOMETA_PLEX_API_KEY: "{{ .PLEX_API_KEY }"
+        KOMETA_PLEX_API_KEY: "{{ .PLEX_API_KEY }}"
         KOMETA_RADARR_API_KEY: "{{ .RADARR_API_KEY }}"
         KOMETA_SONARR_API_KEY: "{{ .SONARR_API_KEY }}"
         KOMETA_TAUTULLI_API_KEY: "{{ .TAUTULLI_API_KEY }}"
