--- a/kubernetes/main/apps/media/kustomization.yaml
+++ b/kubernetes/main/apps/media/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
+  - ./ersatztv/ks.yaml
   - ./kavita/ks.yaml
   - ./komga/ks.yaml
   - ./kyoo/ks.yaml
