feat: disable pinning to worker nodes with no more emptydir

--- a/kubernetes/main/apps/downloads/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/sabnzbd/app/helmrelease.yaml
@@ -73,8 +73,8 @@ spec:
         fsGroup: 568
         fsGroupChangePolicy: OnRootMismatch
         seccompProfile: { type: RuntimeDefault }
-      nodeSelector:
-        topology.kubernetes.io/zone: worker
+      # nodeSelector:
+      #   topology.kubernetes.io/zone: worker
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
