fix: add transcode dir

--- a/kubernetes/main/apps/media/ersatztv/app/helmrelease.yaml
+++ b/kubernetes/main/apps/media/ersatztv/app/helmrelease.yaml
@@ -109,6 +109,8 @@ spec:
         type: emptyDir
       tmp:
         type: emptyDir
+      transcode:
+        type: emptyDir
       media:
         type: nfs
         server: voyager.internal
