fix(es): cleanup external secrets"

--- a/kubernetes/main/apps/downloads/bazarr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/bazarr/app/externalsecret.yaml
@@ -33,11 +33,9 @@ spec:
     name: crunchy-pgo-secrets
     kind: ClusterSecretStore
   target:
-    name: bazarr-secret
-    creationPolicy: Merge
-    deletionPolicy: Retain
+    name: *name
     template:
-      type: Opaque
+      engineVersion: v2
       data:
         POSTGRES_ENABLED: "true"
         POSTGRES_DATABASE: '{{ .dbname }}'
