--- a/kubernetes/main/apps/downloads/bazarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/bazarr/app/helmrelease.yaml
@@ -44,6 +44,8 @@ spec:
             envFrom:
             - secretRef:
                 name: bazarr-secret
+            - secretRef:
+                name: bazarr-db-secret
             probes:
               liveness: &probes
                 enabled: true
