--- a/kubernetes/main/apps/downloads/dashbrr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/dashbrr/app/helmrelease.yaml
@@ -48,6 +48,8 @@ spec:
             envFrom:
             - secretRef:
                 name: dashbrr-secret
+            - secretRef:
+                name: dashbrr-db-secret
             probes:
               liveness: &probes
                 enabled: true
