--- a/kubernetes/main/apps/downloads/readarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/readarr/app/helmrelease.yaml
@@ -52,6 +52,8 @@ spec:
             envFrom:
             - secretRef:
                 name: readarr-secret
+            - secretRef:
+                name: readarr-db-secret
             resources:
               requests:
                 cpu: 100m
