--- a/kubernetes/main/apps/downloads/sonarr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/sonarr/app/externalsecret.yaml
@@ -30,11 +30,9 @@ spec:
     name: crunchy-pgo-secrets
     kind: ClusterSecretStore
   target:
-    name: sonarr-secret
-    creationPolicy: Merge
-    deletionPolicy: Retain
+    name: *name
     template:
-      type: Opaque
+      engineVersion: v2
       data:
         SONARR__POSTGRES__HOST: '{{ index . "pgbouncer-host" }}'
         SONARR__POSTGRES__PORT: '{{ index . "pgbouncer-port" }}'
