--- a/kubernetes/main/apps/observability/gatus/app/externalsecret.yaml
+++ b/kubernetes/main/apps/observability/gatus/app/externalsecret.yaml
@@ -31,11 +31,9 @@ spec:
     name: crunchy-pgo-secrets
     kind: ClusterSecretStore
   target:
-    name: gatus-secret
-    creationPolicy: Merge
-    deletionPolicy: Retain
+    name: *name
     template:
-      type: Opaque
+      engineVersion: v2
       data:
         POSTGRES_URI: '{{ index . "pgbouncer-uri" }}'
   dataFrom:
