--- a/kubernetes/main/apps/observability/grafana/app/externalsecret.yaml
+++ b/kubernetes/main/apps/observability/grafana/app/externalsecret.yaml
@@ -34,11 +34,9 @@ spec:
     name: crunchy-pgo-secrets
     kind: ClusterSecretStore
   target:
-    name: grafana-secret
-    creationPolicy: Merge
-    deletionPolicy: Retain
+    name: *name
     template:
-      type: Opaque
+      engineVersion: v2
       data:
         GF_DATABASE_USER: '{{ .user }}'
         GF_DATABASE_PASSWORD: '{{ .password }}'
