--- a/kubernetes/main/apps/security/authentik/app/externalsecret.yaml
+++ b/kubernetes/main/apps/security/authentik/app/externalsecret.yaml
@@ -34,11 +34,9 @@ spec:
     name: crunchy-pgo-secrets
     kind: ClusterSecretStore
   target:
-    name: authentik-secret
-    creationPolicy: Merge
-    deletionPolicy: Retain
+    name: *name
     template:
-      type: Opaque
+      engineVersion: v2
       data:
         AUTHENTIK_POSTGRESQL__NAME: '{{ .dbname }}'
         AUTHENTIK_POSTGRESQL__HOST: '{{ .host }}' #pgBouncer is set to session for Grafana, and Authentik requires transaction
