--- a/kubernetes/main/apps/self-hosted/lubelog/app/externalsecret.yaml
+++ b/kubernetes/main/apps/self-hosted/lubelog/app/externalsecret.yaml
@@ -35,11 +35,9 @@ spec:
     name: crunchy-pgo-secrets
     kind: ClusterSecretStore
   target:
-    name: lubelog-secret
-    creationPolicy: Merge
-    deletionPolicy: Retain
+    name: *name
     template:
-      type: Opaque
+      engineVersion: v2
       data:
         POSTGRES_CONNECTION: 'Host={{ index . "pgbouncer-host" }}:{{ .port }};Username={{ .user }};Password={{ .password }};Database={{ .dbname }}'
   dataFrom:
