--- a/kubernetes/main/apps/self-hosted/lubelog/app/helmrelease.yaml
+++ b/kubernetes/main/apps/self-hosted/lubelog/app/helmrelease.yaml
@@ -42,6 +42,8 @@ spec:
             envFrom:
               - secretRef:
                   name: "{{ .Release.Name }}-secret"
+              - secretRef:
+                  name: "{{ .Release.Name }}-db-secret"
             resources:
               requests:
                 cpu: 15m
