--- a/kubernetes/main/apps/self-hosted/paperless/app/externalsecret.yaml
+++ b/kubernetes/main/apps/self-hosted/paperless/app/externalsecret.yaml
@@ -48,11 +48,9 @@ spec:
     name: crunchy-pgo-secrets
     kind: ClusterSecretStore
   target:
-    name: paperless-secret
-    creationPolicy: Merge
-    deletionPolicy: Retain
+    name: *name
     template:
-      type: Opaque
+      engineVersion: v2
       data:
         PAPERLESS_DBENGINE: postgresql
         PAPERLESS_DBPORT: '{{ index . "pgbouncer-port" }}'
