--- a/kubernetes/main/apps/self-hosted/paperless/app/helmrelease.yaml
+++ b/kubernetes/main/apps/self-hosted/paperless/app/helmrelease.yaml
@@ -70,6 +70,8 @@ spec:
             envFrom:
             - secretRef:
                 name: paperless-secret
+            - secretRef:
+                name: paperless-db-secret
             resources:
               requests:
                 cpu: 15m
