--- a/kubernetes/main/apps/downloads/prowlarr/app/helmrelease.yaml
+++ b/kubernetes/main/apps/downloads/prowlarr/app/helmrelease.yaml
@@ -49,6 +49,8 @@ spec:
             envFrom:
             - secretRef:
                 name: prowlarr-secret
+            - secretRef:
+                name: prowlarr-db-secret
             resources:
               requests:
                 cpu: 100m
