--- a/kubernetes/main/apps/media/kyoo/app-template/externalsecret.yaml
+++ b/kubernetes/main/apps/media/kyoo/app-template/externalsecret.yaml
@@ -50,11 +50,9 @@ spec:
     name: crunchy-pgo-secrets
     kind: ClusterSecretStore
   target:
-    name: kyoo-secret
-    creationPolicy: Merge
-    deletionPolicy: Retain
+    name: *name
     template:
-      type: Opaque
+      engineVersion: v2
       data:
         POSTGRES_DB: '{{ .dbname }}'
         POSTGRES_SERVER: '{{ .host }}'
