--- a/kubernetes/main/apps/media/kyoo/app-template/helmrelease.yaml
+++ b/kubernetes/main/apps/media/kyoo/app-template/helmrelease.yaml
@@ -96,6 +96,8 @@ spec:
             envFrom:
               - secretRef:
                   name: kyoo-secret
+              - secretRef:
+                  name: kyoo-db-secret
             image:
               repository: ghcr.io/zoriya/kyoo_migrations
               tag: 4.7.0@sha256:564c05b0c166c8f20ad52382dc1adf64170274183a154dcefc9ff613c4424a18
