--- a/kubernetes/main/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/main/apps/observability/gatus/app/helmrelease.yaml
@@ -62,6 +62,8 @@ spec:
             envFrom:
             - secretRef:
                 name: gatus-secret
+            - secretRef:
+                name: gatus-db-secret
             probes:
               liveness: &probes
                 enabled: true
