--- a/kubernetes/utility/apps/kube-tools/node-feature-discovery/app/helmrelease.yaml
+++ b/kubernetes/utility/apps/kube-tools/node-feature-discovery/app/helmrelease.yaml
@@ -28,7 +28,7 @@ spec:
     worker:
       config:
         core:
-          sources: ["custom", "pci", "system", "usb"]
+          labelSources: ["custom", "pci", "system", "usb"]
         sources:
           usb:
             deviceClassWhitelist: ["02", "03", "0e", "ef", "fe", "ff"]
