feat(es): combine secrets

--- a/kubernetes/main/apps/self-hosted/paperless/app/externalsecret.yaml
+++ b/kubernetes/main/apps/self-hosted/paperless/app/externalsecret.yaml
@@ -5,9 +5,6 @@ kind: ExternalSecret
 metadata:
   name: &name paperless-secret
 spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: onepassword-connect
   target:
     name: *name
     template:
@@ -33,25 +30,7 @@ spec:
                 ]
             }
           }
-  dataFrom:
-  - extract:
-      key: paperless
----
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: &name paperless-db-secret
-spec:
-  refreshInterval: 1m
-  secretStoreRef:
-    name: crunchy-pgo-secrets
-    kind: ClusterSecretStore
-  target:
-    name: *name
-    template:
-      engineVersion: v2
-      data:
+        # Database
         PAPERLESS_DBENGINE: postgresql
         PAPERLESS_DBPORT: '{{ index . "pgbouncer-port" }}'
         PAPERLESS_DBNAME: '{{ .dbname }}'
@@ -60,4 +39,14 @@ spec:
         PAPERLESS_DBPASS: '{{ .password }}'
   dataFrom:
   - extract:
-      key: postgres-pguser-paperless
+       key: paperless
+    sourceRef:
+       storeRef:
+         kind: ClusterSecretStore
+         name: onepassword-connect
+  - extract:
+       key: postgres-pguser-paperless
+    sourceRef:
+       storeRef:
+          name: crunchy-pgo-secrets
+          kind: ClusterSecretStore
